Update Jeremy adoc for styles

--- a/docs/team/jeremychan.adoc
+++ b/docs/team/jeremychan.adoc
@@ -1,6 +1,11 @@
 = Chan Liang Fei Jeremy - Project Portfolio
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+:imagesDir: ../images
+:stylesDir: ../stylesheets
 :toc:
 :toc-title:
+:sect-num:
+:sectnums:
 :toc-section:
 
 == Project: DeathNote
