--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -599,12 +599,14 @@ the added tags will be deleted afterwards.
 in any part of the command and the program will be able to execute the user's intention.
 ****
 // end::tagManagement[]
-// tag::searchbox
+
+// tag::searchbox[]
 === Searchbox
 
 The additional searchbox used for quick partial search/filter is a child of `UiParts` and is based on using `Listener` to detect any changes to `TextProperty`.
 
 Upon detecting changes in observables, a handler (using Lambda Expression) then passes them to `Logic` to execute the pfind command.
+
 [source,java]
 ----
 public SearchBox (Logic logic) {
@@ -646,6 +648,37 @@ Seen from the script, this handle takes care of 2 cases.
 Case (1) is to restore the default list of all contacts after users have used the searchbox and removed all text from field after usage
 
 The rest of the execution then, follows closely to the case where the command is executed through `CommandBox`
+
+==== Design Considerations
+
+**Aspect:** Approach user should follow to input the command +
+**Alternative 1 (current choice):** Track every single changes in `SearchBox` textField. +
+**Pros:** Intuitive, need no additional step as the person card below changes real-time. +
+**Cons:** Many handler calls, duplicate execution when retyping same characters +
+**Alternative 2:** Confirmation with `Enter` key or similar feedback. +
+**Pros:** Less calls and hence more effective logging. +
+**Cons:** May not be intuitive pressing `Enter` with partially filled input.
+
+---
+
+**Aspect:** Execution of `pfind` +
+**Alternative 1 (current choice):** Through `Logic` +
+**Pros:** Reusing code. Binding it to `Logic` will automatically update any related possible changes occuring in `Logic Component`. Also easier to perform tests. +
+**Cons:** More detoured execution, going through checking of command type and parser. +
+**Alternative 2:** Directly create `PartialCommand` object with trimmed list of arguments. +
+**Pros:** Lowers coupling and dependencies, less irrelevant logs.  +
+**Cons:** Lower accountability and assumes no future changes to `Command` signature +
+
+---
+
+**Aspect:** Position and choice of FXML container  +
+**Alternative 1 (current choice):** Follows `CommandBox` styleClass` which is in turn contained by `VBox` together with and directly above `PersonListCard`. +
+**Pros:** Similar aesthetic look to `CommandBox` to promote intuition to type in command, but within immediate proximity of person cards to suggest some sort of filtering. +
+**Cons:** Looks somewhat awkward if the person list is scrolled down (slight disjoint in seperation line and card) +
+**Alternative 2:** Popup textField ui upon hover +
+**Pros:** Can save space in case this software is run on very low resolution. Also prevent confusion of which textField to type in command. +
+**Cons:** More keyboard-based user may not notice the feature and/or movement in cursor may close the popup unintentionally. +
+// end::searchbox[]
 
 // tag::li[]
 === Addition of Life Insurances
@@ -706,37 +739,6 @@ int personIndex = 1;
 Print Command iterates through each contact in the addressbook and prints out his/her basic details first.
 For each person, print command then iterates through ALL insurance policies he is involved in (whether as an
 owner/beneficiary/insured) and prints out the policy details.
-
-==== Design Considerations
-
-**Aspect:** Approach user should follow to input the command +
-**Alternative 1 (current choice):** Track every single changes in `SearchBox` textField. +
-**Pros:** Intuitive, need no additional step as the person card below changes real-time. +
-**Cons:** Many handler calls, duplicate execution when retyping same characters +
-**Alternative 2:** Confirmation with `Enter` key or similar feedback. +
-**Pros:** Less calls and hence more effective logging. +
-**Cons:** May not be intuitive pressing `Enter` with partially filled input.
-
----
-
-**Aspect:** Execution of `pfind` +
-**Alternative 1 (current choice):** Through `Logic` +
-**Pros:** Reusing code. Binding it to `Logic` will automatically update any related possible changes occuring in `Logic Component`. Also easier to perform tests. +
-**Cons:** More detoured execution, going through checking of command type and parser. +
-**Alternative 2:** Directly create `PartialCommand` object with trimmed list of arguments. +
-**Pros:** Lowers coupling and dependencies, less irrelevant logs.  +
-**Cons:** Lower accountability and assumes no future changes to `Command` signature +
-
----
-
-**Aspect:** Position and choice of FXML container  +
-**Alternative 1 (current choice):** Follows `CommandBox` styleClass` which is in turn contained by `VBox` together with and directly above `PersonListCard`. +
-**Pros:** Similar aesthetic look to `CommandBox` to promote intuition to type in command, but within immediate proximity of person cards to suggest some sort of filtering. +
-**Cons:** Looks somewhat awkward if the person list is scrolled down (slight disjoint in seperation line and card) +
-**Alternative 2:** Popup textField ui upon hover +
-**Pros:** Can save space in case this software is run on very low resolution. Also prevent confusion of which textField to type in command. +
-**Cons:** More keyboard-based user may not notice the feature and/or movement in cursor may close the popup unintentionally. +
-// end::searchbox[]
 
 // tag::saveloadpdf
 
