--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -10,34 +10,65 @@ ifdef::env-github[]
 :tip-caption: :bulb:
 :note-caption: :information_source:
 endif::[]
-:repoURL: https://github.com/CS2103AUG2017-T15-B2/main/tree/master
+:repoURL: https://github.com/CS2103AUG2017-T15-B2/main
+
+{empty} +
+
+image::contag_logo_ugdg.png[align="center"]
+
+{empty} +
+
+By: `T15-B2`      `Aw Wen Hao`      `Calvin Tantio`      `Cheng Jin Ting`      `Chung Tin Long`       Since: `Aug 2017`      Licence: `MIT`
 
 
-By: `T15-B2`      `Aw Wen Hao`      `Calvin Tantio`      `Cheng Jin Ting`      `Chung Tin Long`       Since: `Jun 2016`      Licence: `MIT`
+== Introduction
 
+=== Welcome to ConTag!
 
-Welcome to the ConTag's Developer Guide! Fret not if you are a developer or user,regardless if you are a beginner or expert, this guide brings to you all the necessary information you will need to navigate around the address book.This includes the initial set up, implementation of the features, coding, documentation writing to the testing of the application.Let's start from zero knowledge to full knowledge!
+Contag is an efficient and feature-packed address book desktop application custom-built for PC, capable of organizing contacts for even the most demanding business users and busiest frequent travellers.
 
-== Quick Start
+=== The ConTag Help System
+
+Fret not, we are here to help you navigate the application with ease.
+Our help system is designed to progressively provide all necessary information from beginner to expert.
+
+Apart from comprehensive help coverage in this user guide, you can also choose to get concentrated help on specific areas with `help` in the command line of Contag or pressing the `F1` key.
+
+=== Features and Capabilities Overview
+Key features you can expect:
+
+* Saving comprehensive details of contacts in the address book to make each contact more meaningful
+
+* Locating contact's address via the integrated Google Maps
+
+* Creating a new schedule/activity with a contact
+
+* Sending email to multiple contacts easily
+
+=== Authors and Contributors
+The initial version of the user guide was written by Team SE-EDU.
+The current releases for ConTag are currently being orchestrated by a team of four, Aw Wen Hao , Calvin Tantio, Cheng Jin Ting, Chung Tin Long.
+
+== Getting Started
 
 .  Ensure you have Java version `1.8.0_60` or later installed in your Computer.
 +
 [NOTE]
-Having any Java 8 version is not enough. +
-This app will not work with earlier versions of Java 8.
+This app will not work with earlier versions of Java 8 and below.
 +
 .  Download the latest `addressbook.jar` link:{repoURL}/releases[here].
-.  Copy the file to the folder you want to use as the home folder for your Address Book.
+.  Copy the file to your home folder of choice.
 .  Double-click the file to start the app. The GUI should appear in a few seconds.
 +
-image::UI_Map.PNG[width="790"]
+image::ContagDemo.png[width="790"]
 +
 .  Type the command in the command box and press kbd:[Enter] to execute it. +
 e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 .  Some example commands you can try:
 
 * *`list`* : lists all contacts
-* **`add`**`n/John Doe p/98765432 e/johnd@example.com a/block 123, john street, #01-01, Singapore 407989` : adds a contact named `John Doe` to the Address Book.
+* **`add`**`n/John p/987654 e/john@e.com a/Blk 1, John St, #01-01, S407989` : +
+adds a contact named `John Doe` to the Address Book.
 * **`delete`**`3` : deletes the 3rd contact shown in the current list
 * *`exit`* : exits the app
 
@@ -45,19 +76,26 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 
 == Features
 
-====
-*Command Format*
+=== Command Format
 
 * Words in `UPPER_CASE` are the parameters to be supplied by the user e.g. in `add n/NAME`, `NAME` is a parameter which can be used as `add n/John Doe`.
-* Items in square brackets are optional e.g `n/NAME [t/TAG]` can be used as `n/John Doe t/friend` or as `n/John Doe`.
-* Items with `…`​ after them can be used multiple times including zero times e.g. `[t/TAG]...` can be used as `{nbsp}` (i.e. 0 times), `t/friend`, `t/friend t/family` etc.
+* Items in *square brackets* are optional e.g `n/NAME [t/TAG]` can be used as `n/John Doe t/friend` or as `n/John Doe`.
+* Items with `…`​ after them can be optionally used multiple times or not at all:
+
+_e.g. `[t/TAG]...` can be used as `{nbsp}` (i.e. 0 times), `t/friend`, `t/friend t/family` etc._
+
 * Parameters can be in any order e.g. if the command specifies `n/NAME p/PHONE_NUMBER`, `p/PHONE_NUMBER n/NAME` is also acceptable.
 * Command words can be replaced by their specified aliases e.g. `delete INDEX` is the same as `d INDEX`.
-====
 
-=== Viewing help : `help`
 
-Alias: `h`
+[TIP]
+Once you have familiarized yourself with the application, try typing a command's alias in place of the full command keyword to save more time!
+
+=== Quick Help
+
+==== Viewing help : `help`
+
+=> Alias: `h` <=
 
 Shows the usage of the specific command identified. If no command is specified, opens help window. +
 Format: `help [COMMAND_IDENTIFIER]`
@@ -66,7 +104,7 @@ Format: `help [COMMAND_IDENTIFIER]`
 A command identifier includes all existing commands and their aliases.
 
 [NOTE]
-You need to close the all help windows before executing `help [COMMAND_IDENTIFIER]`.
+Close all help windows before executing `help [COMMAND_IDENTIFIER]`.
 
 Examples:
 
@@ -74,19 +112,22 @@ Examples:
 * `help add` (using command word)
 * `help a` (using alias)
 
+=== Modifying contacts
 
-=== Adding a person: `add`
+==== Adding a person: `add` [Last updated in v1.3]
 
-Alias: `a`
+=> Alias: `a` <=
 
 Adds a person to the address book +
-Format: `add n/NAME p/PHONE_NUMBER e/EMAIL [e/OTHER EMAIL]... a/ADDRESS [t/TAG]...`
+Format: `add n/NAME p/PHONE_NUMBER e/EMAIL [e/UNIQUE EMAIL]... a/ADDRESS [t/TAG]...`
 
 [TIP]
 A person can have any number of tags (including 0).
+
+[TIP]
 A person must have at least 1 email.
 
-[NOTE]
+[TIP]
 ADDRESS needs to follow the format: `BLOCK, STREET, [UNIT,] POSTAL CODE` with `UNIT` being an optional parameter.
 
 Examples:
@@ -94,19 +135,18 @@ Examples:
 * `add n/John Doe p/98765432 e/johnd@example.com a/123, John street, #01-01, Singapore 407989`
 * `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/12, Newgate Prison, IL 043 p/1234567 t/criminal`
 
-=== Listing all persons : `list`
+[INFO]
+*v1.3 update:* This feature allows the adding of more than 1 EMAIL for a person, as well as restrict the ADDRESS to the format: `BLOCK, STREET, [UNIT,] POSTAL CODE`.
 
-Alias: `l`
+==== Editing a person : `edit`
 
-Shows a list of all persons in the address book. +
-Format: `list`
-
-=== Editing a person : `edit`
-
-Alias: `e`
+=> Alias: `e` <=
 
 Edits an existing person in the address book. +
 Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL]... [a/ADDRESS] [t/TAG]...`
+
+[TIP]
+Ensure that you have input the correct prefix [n/NAME] , [p/PHONE] , [e/EMAIL]  , [a/ADDRESS] ,  [t/TAG]
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
@@ -123,12 +163,47 @@ Edits the phone number and email address of the 1st person to be `91234567` and 
 * `edit 2 n/Betsy Crower t/` +
 Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
 
-=== Locating persons by any field : `find` [Since v1.2]
+==== Deleting person(s) : `delete` [Last updated in v1.1]
 
-Alias: `f`
+=> Alias: `d` <=
+
+Deletes the specified person(s) from the address book. +
+Format: `delete INDEX [UNIQUE INDEX]...`
+
+****
+* Deletes the people at the specified index or indices.
+* The index refers to the index number shown in the most recent listing.
+* The index *must be a positive integer* 1, 2, 3, ...
+* If there is more than one index, the indices indicated must be different from each other.
+****
+
+[INFO]
+*v1.1 update:* This feature allows the deleting of more than 1 person.
+
+Examples:
+
+* `list` +
+`delete 1 2` +
+Deletes the 1st and 2nd person in the address book.
+* `find Betsy` +
+`delete 1` +
+Deletes the 1st person in the results of the `find` command.
+
+==== Clearing all entries : `clear`
+
+=> Alias: `c` <=
+
+Clears all entries from the address book. +
+Format: `clear`
+
+=== Key features
+
+==== Finding persons by any field : `find` [Since v1.2 and v1.5]
+
+=> Alias: `f` <=
 
 Finds person based on the searched  field. +
-Format: `find KEYWORD based on [n/NAME] or  [p/PHONE]  or [e/EMAIL] or [a/ADDRESS] or  [t/TAG]`
+Format: `find KEYWORD based on [n/NAME] or  [p/PHONE]  or [c/COUNTRY] or [e/EMAIL] or [a/ADDRESS] or  [t/TAG] or [act/ACTIVTY]`
 
 
 ****
@@ -166,37 +241,23 @@ Returns person with address `30, Geylang Street 29 , #10-08, Singapore 705678`
 Returns person with address `30, Geylang Street 29 , #10-08, Singapore 705678`
 
 
-* `find t/friends` +
-Returns all persons with tag `friends`
-* `find t/friends lovers` +
-Returns all persons with tag `friends` and `lovers`
+* `find t/boss` +
+Returns all persons with tag `boss`
+* `find t/CEO boss` +
+Returns all persons with tag `CEO` and `boss`
 
-=== Deleting person(s) : `delete`
+* `find act/Interview` +
+Returns all persons with scheduled activity `Interview`
+* `find t/Party Presentation` +
+Returns all persons with tag `Party` and `Presentation`
 
-Alias: `d`
+* `find c/Singapore` +
+Returns all persons of country code `Singapore`
 
-Deletes the specified person(s) from the address book. +
-Format: `delete INDEX [OTHER INDICES]...`
+// tag::locate[]
+==== Locating a person's address : `locate` [Since v1.2]
 
-****
-* Deletes the people at the specified `INDEX`.
-* The index refers to the index number shown in the most recent listing.
-* The index *must be a positive integer* 1, 2, 3, ...
-* If there is more than one index, the indices indicated must be different from each other.
-****
-
-Examples:
-
-* `list` +
-`delete 1 2` +
-Deletes the 1st and 2nd person in the address book.
-* `find Betsy` +
-`delete 1` +
-Deletes the 1st person in the results of the `find` command.
-
-=== Locating a person's address : `locate` [Since v1.2]
-
-Alias: `lc`
+=> Alias: `lc` <=
 
 Locates the address of the person identified by the index number used in the last person listing. +
 Format: `locate INDEX`
@@ -215,33 +276,34 @@ Locates the 2nd person's address in the address book.
 * `find Betsy` +
 `locate 1` +
 Locates the 1st person's address in the results of the `find` command.
+// tag::locate[]
 
-=== Scheduling an activity: `schedule` [Since v1.3]
+==== Scheduling an activity: `schedule` [Since v1.3]
 
-Alias: `sc`
+=> Alias: `sc` <=
 
-Schedules an activity with a person in the contact list. +
-Format: `schedule INDEX d/DATE act/ACTIVITY`
+Schedules an activity with person(s) specified by the index number(s). +
+Format: `schedule INDEX [UNIQUE INDEX]... d/DATE act/ACTIVITY`
 
 ****
-* DATE must follow DD-MM-YYYY or DD-MM format
+* DATE must follow DD-MM-YYYY format
 ****
 
 Examples:
 
 * `list` +
-`schedule 3 d/15-01-2018 act/Play basketball` +
-Associates the specified schedule with the 3rd person in the address book.
+`schedule 1 3 d/15-01-2018 act/Play basketball` +
+Associates the specified schedule with the 1st and 3rd persons in the address book.
 * `find Betsy` +
-`schedule 1 d/25-12 act/Christmas dinner` +
+`schedule 1 d/25-12-2017 act/Christmas dinner` +
 Associates the specified schedule with the 1st person in the results of the `find` command.
 
-=== Getting email addresses : `copy` [Coming in v2.0]
+==== Getting email addresses : `copy` [Since v1.3]
 
-Alias: `c`
+=> Alias: `y` <=
 
 Outputs to console the email addresses of all person(s) selected by index number(s). +
-Format: `copy INDEX [OTHER INDICES...]`
+Format: `copy INDEX [UNIQUE INDEX]...`
 
 ****
 * Copies email addresses of people at the specified `INDEX`.
@@ -257,9 +319,9 @@ Outputs the 1st person's email address in console: `johndoe@example.com`
 * `copy 1 4 5` +
 Outputs email addresses of people at index 1, 4 and 5, with a semi-colon between each: `a@a.com; d@d.com; e@e.com`
 
-=== Opening calendar : `calendar` [Since v1.2]
+==== Opening calendar : `calendar` [Since v1.3]
 
-Alias: `cl`
+=> Alias: `cl` <=
 
 Open a calendar browser that display the current events. +
 Format: `calendar`
@@ -271,10 +333,33 @@ Opens up calendar browser in the address book. +
 * `cl` (using alias) +
 Opens up calendar browser in the address book.
 
+==== Opening calendar : `calendar` [Since v1.4]
 
-=== Listing entered commands : `history`
+=> Alias: `em` <=
 
-Alias: `his`
+Open a email browser that for sending of email. +
+Format: `email`
+
+Examples:
+
+Opens up email browser in the address book. +
+* `email` (using command word) +
+* `em` (using alias) +
+Opens up email browser in the address book.
+
+=== Other navigation commands
+
+==== Listing all persons : `list`
+
+=> Alias: `l` <=
+
+Shows a list of all persons in the address book. +
+Format: `list`
+
+
+==== Listing entered commands : `history`
+
+=> Alias: `his` <=
 
 Lists all the commands that you have entered in reverse chronological order. +
 Format: `history`
@@ -285,9 +370,9 @@ Pressing the kbd:[&uarr;] and kbd:[&darr;] arrows will display the previous and 
 ====
 
 // tag::undoredo[]
-=== Undoing previous command : `undo`
+==== Undoing previous command : `undo`
 
-Alias: `u`
+=> Alias: `u` <=
 
 Restores the address book to the state before the previous _undoable_ command was executed. +
 Format: `undo`
@@ -313,9 +398,9 @@ The `undo` command fails as there are no undoable commands executed previously.
 `undo` (reverses the `clear` command) +
 `undo` (reverses the `delete 1` command) +
 
-=== Redoing the previously undone command : `redo`
+==== Redoing the previously undone command : `redo`
 
-Alias: `r`
+=> Alias: `r` <=
 
 Reverses the most recent `undo` command. +
 Format: `redo`
@@ -338,50 +423,56 @@ The `redo` command fails as there are no `undo` commands executed previously.
 `redo` (reapplies the `clear` command) +
 // end::undoredo[]
 
-=== Clearing all entries : `clear`
+==== Exiting the program : `exit`
 
-Alias: `x`
-
-Clears all entries from the address book. +
-Format: `clear`
-
-=== Exiting the program : `exit`
-
-Alias: `q`
+=> Alias: `q` <=
 
 Exits the program. +
 Format: `exit`
 
-=== Saving the data
+=== Saving and transferring data
 
-Address book data are saved in the hard disk automatically after any command that changes the data. +
+Address book data is *saved in the hard disk automatically* after any command that modifies data. +
 There is no need to save manually.
+
+To *transfer data* to another Computer, install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
 
 == Command Summary
 
-* *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...` +
-e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 t/friend t/colleague`
-* *Clear* : `clear`
-* *Delete* : `delete INDEX [OTHER INDICES]...` +
-e.g. `delete 1 3`
-* *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
-e.g. `edit 2 n/James Lee e/jameslee@example.com`
-* *Find* : `find [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
-e.g. `find James Jake`
-* *List* : `list`
-* *Help* : `help`
-* *Locate* : `locate INDEX` +
-e.g.`locate 2`[Coming in v2.0]
-* *Schedule* : `schedule INDEX d/DATE act/ACTIVITY` +
-e.g. `schedule 1 d/25-12 act/Christmas dinner`
-* *Copy* : `copy INDEX [OTHER INDICES]...` +
-e.g.`copy 1 2` [Coming in v2.0]
-* *History* : `history`
-* *Undo* : `undo`
-* *Redo* : `redo`
-* *Calendar* : `calendar`
+[width="59%",cols="5%,<2%,<50%,<42%",options="header",]
+|=======================================================================
+|Commands Words |Commands Alias |Format|Example
+|link:#adding-a-person-code-add-code[Add] | `a`  |`add n/NAME p/PHONE_NUMBER e/EMAIL [e/UNIQUE EMAIL] a/ADDRESS [t/TAG]` |  `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 t/friend`
 
-== FAQ
+|link:#opening-calendar-code-calendar-code-since-v1-3[Calendar] |`cl` |`calendar` |
 
-*Q*: How do I transfer my data to another Computer? +
-*A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
+|link:#clearing-all-entries-code-clear-code[Clear] | `c`| `clear` |
+
+|link:#getting-email-addresses-code-copy-code-since-v1-3[Copy] |`cp` |`copy INDEX [UNIQUE INDEX]...`|
+
+|link:#deleting-person-s-code-delete-code[Delete] |`d`|`delete INDEX [UNIQUE INDEX]...`|
+
+|link:#editing-a-person-code-edit-code[Edit] | `e` |`edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]` |`edit 2 n/James Lee e/jameslee@example.com`
+
+|link:#opening-email-code-email-code-since-v1-4[Email] |`em` |`email` |
+
+|link:#exiting-the-program-code-exit-code[Exit] |  | `exit` |
+
+|link:#finding-persons-by-any-field-code-find-code-since-v1-2-and-v1-5[Find]|`f` |`find KEYWORD based on [n/NAME] or  [p/PHONE]  or [c/COUNTRY] or [e/EMAIL] or [a/ADDRESS] or  [t/TAG] or [act/ACTIVTY]` |`find n/James Jake`
+
+|link:#viewing-help-code-help-code[Help] | `h` | `help COMMAND WORD` | `help add`
+
+|link:#listing-entered-commands-code-history-code[History]|`his`|`history`|
+
+|link:#listing-entered-commands-code-history-code[List] |`l` |`list` |
+
+|link:#locating-a-person-s-address-code-locate-code-since-v1-2[Locate]|`lc` |`locate INDEX` | `locate 2`
+
+|link:#redoing-the-previously-undone-command-code-redo-code[Redo] |`r` |`redo` |
+
+|link:#scheduling-an-activity-code-schedule-code-since-v1-3[Schedule] |`sc` |`schedule INDEX [INDEX]... d/DATE act/ACTIVITY` | `schedule 1 d/25-12-2017 act/Christmas dinner`
+
+|link:#undoing-previous-command-code-undo-code[Undo] |`u`| `undo` |
+
+|=======================================================================
+
