--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -226,7 +226,7 @@ The sections below give more details of each component.
 
 As seen from _Figure 2.2.1_ below, the UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `PersonListPanel`, `StatusBarFooter`, `BrowserPanel` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
-image::UiClassDiagram.png[width="800"]
+image::UiComponentClassDiagram.png[width="800"]
 _Figure 2.2.1 : Structure of the UI Component_
 
 *API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
@@ -789,7 +789,7 @@ _Figure 4.6.3: Output of `CalendarCommand.java` execution_
 ==== Design Considerations for `FindCommand`
 
 
-**Aspect:** Implementationt of `CalendarCommand` +
+**Aspect:** Implementation of `CalendarCommand` +
 **Alternative 1 (current choice)**: Opening  `Calendar` webpage in `BrowserPanel`. +
 **Pros:** To brings about greater convenience for the user as user does not need to navigate between multple webpages to find the calendar.User are able to find out about the public holidays which are not avaliable on desktop calendar. +
 **Cons:** User might bypass the `CalendarCommand` and rely on desktop calendar +
@@ -799,6 +799,81 @@ _Figure 4.6.3: Output of `CalendarCommand.java` execution_
 
 ---
 
+// tag::agenda[]
+=== Viewing of user's agenda [Since v1.4]
+
+All scheduled activities by the user are displayed as a list view in the `AgendaPanel`. The `AgendaPanel` is first initialised in the `MainWindow`, with the observable schedule list of the `AddressBook` being passed in as a parameter to its constructor. This can be observed in _Figure 4.7.1_ below.
+
+[source,java]
+----
+public class MainWindow extends UiPart<Region> {
+    void fillInnerParts() {
+        // ... Initialise other UI parts ...
+
+        agendaPanel = new AgendaPanel(model.getAddressBook().getScheduleList());
+
+        // ... Initialise other UI parts ...
+    }
+}
+
+----
+_Figure 4.7.1: Code section in MainWindow.java_
+
+Each schedule in the schedule list is represented as a `ScheduleCard`. Each `ScheduleCard` can be viewed in each cell of the list view. The `AgendaPanel` connects each schedule to a `ScheduleCard` as seen in _Figure 4.7.2_ below.
+
+[source,java]
+----
+public class AgendaPanel extends UiPart<Region> {
+    private void setConnections(ObservableList<Schedule> scheduleList) {
+        ObservableList<ScheduleCard> mappedList = EasyBind.map(
+                scheduleList, (schedule) -> new ScheduleCard(schedule, scheduleList.indexOf(schedule) + 1));
+
+        // ... Set items to list view ...
+    }
+}
+----
+_Figure 4.7.2: Code section in AgendaPanel.java_
+
+New additions to the `AddressBook` schedule list will be reflected in the schedule cards and changes in any schedule will be reflected in the cards themselves. This is implemented as shown in _Figure 4.7.3_ below:
+
+[source,java]
+----
+public class ScheduleCard extends UiPart<Region> {
+     private void bindListeners(Schedule schedule) {
+        activity.textProperty().bind(Bindings.convert(schedule.getActivityProperty()));
+        date.textProperty().bind(Bindings.convert(schedule.getScheduleDateProperty()));
+        schedule.getPersonInvolvedNamesProperty().addListener((observable, oldValue, newValue) -> {
+            personNames.getChildren().clear();
+            initPersonNames(schedule);
+        });
+    }
+}
+----
+_Figure 4.7.3: Code section in ScheduleCard.java_
+
+The UI outcome for the `AgendaPanel` consisting of a few schedules can be seen below in _Figure 4.7.4_.
+
+image::AgendaPanelUI.png[width="400"]
+_Figure 4.7.4: UI display for user's agenda_
+
+==== Design Considerations for viewing of user's agenda
+
+**Aspect:** Location of agenda +
+**Alternative 1 (current choice)**: Agenda can be viewed in the `MainWindow`. +
+**Pros:** User is able to view the agenda immediately upon starting the application. +
+**Cons:** The `AgendaPanel` compromises the space allocated to the `BrowserPanel`. +
+**Alternative 2:** Agenda is located in a separated window, which can be opened using a command input +
+**Pros:** More space will be allocated to `BrowserPanel`, hence the user can enjoy a larger view of a contact's address location. User also has the freedom to minimise or expand agenda window. +
+**Cons:** User needs to take the extra step to view the agenda, he or she may forget about the scheduled activities if agenda is not opened. +
+
+---
+// end::agenda[]
+
+// tag::reminder[]
+=== Pop-up reminder window [Since v1.4]
+
+==== Design Considerations for viewing of user's agenda
+// end::reminder[]
 
 === Logging
 
