--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -425,6 +425,7 @@ Removes the `friends` tag from the second to fifth person in the contact list.
 
 // end::removetag[]
 
+// tag::remarkchecklist[]
 ==== Add/remove a remark note to contact: `addremark`, `removeremark`
 
 *Description:* Adds/Removes the specified remarks(s).
@@ -442,7 +443,7 @@ Format to remove remark: `removeremark INDEX REMARKINDEX`
 [TIP]
 A person can have any number of remarks (including 0) +
 Remarks can be anything (including a blank) +
-GUI will display a list of person with pending remarks.
+GUI will display a list of person with pending remarks on the right.
 
 Examples:
 
@@ -450,6 +451,8 @@ Examples:
 * `addremark 3 r/Finish project with him by tomorrow r/Eat supper with him at 10`
 * `removeremark 1 1 3`
 * `removeremark 2 1`
+
+// end::remarkchecklist[]
 
 ==== Link twitter page to contact: `link`
 
